Closed Bug 1777572 Opened 2 years ago Closed 2 years ago

Crash [@ GetEmbedderPolicy]

Categories

(Core :: DOM: Core & HTML, defect, P3)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
104 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox-esr102 --- wontfix
firefox103 --- wontfix
firefox104 --- verified

People

(Reporter: jkratzer, Assigned: smaug)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, testcase, Whiteboard: [bugmon:bisected,confirmed])

Crash Data

Attachments

(2 files)

Testcase found while fuzzing mozilla-central rev 65e579f52525 (built with: --enable-address-sanitizer --enable-fuzzing).

Testcase can be reproduced using the following commands:

$ pip install fuzzfetch grizzly-framework
$ python -m fuzzfetch --build 65e579f52525 --asan --fuzzing -n firefox
$ python -m grizzly.replay ./firefox/firefox testcase.html
[@ GetEmbedderPolicy]

    =================================================================
    ==1449262==ERROR: AddressSanitizer: SEGV on unknown address 0x0000000003a8 (pc 0x7f9f884d8380 bp 0x7ffe5793e880 sp 0x7ffe5793da60 T0)
    ==1449262==The signal is caused by a READ memory access.
    ==1449262==Hint: address points to the zero page.
        #0 0x7f9f884d8380 in GetEmbedderPolicy /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Document.h:1101:12
        #1 0x7f9f884d8380 in nsWindowWatcher::OpenWindowInternal(mozIDOMWindowProxy*, nsTSubstring<char> const&, nsTSubstring<char> const&, nsTSubstring<char> const&, bool, bool, bool, nsIArray*, bool, bool, bool, nsPIWindowWatcher::PrintKind, nsDocShellLoadState*, mozilla::dom::BrowsingContext**) /toolkit/components/windowwatcher/nsWindowWatcher.cpp:1170:49
        #2 0x7f9f884dc2a8 in nsWindowWatcher::OpenWindow2(mozIDOMWindowProxy*, nsTSubstring<char> const&, nsTSubstring<char> const&, nsTSubstring<char> const&, bool, bool, bool, nsISupports*, bool, bool, bool, nsPIWindowWatcher::PrintKind, nsDocShellLoadState*, mozilla::dom::BrowsingContext**) /toolkit/components/windowwatcher/nsWindowWatcher.cpp:387:10
        #3 0x7f9f7ddd1776 in nsGlobalWindowOuter::OpenInternal(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, bool, bool, bool, bool, bool, nsIArray*, nsISupports*, nsDocShellLoadState*, bool, nsGlobalWindowOuter::PrintKind, mozilla::dom::BrowsingContext**) /dom/base/nsGlobalWindowOuter.cpp:6982:21
        #4 0x7f9f7ddd7ae7 in nsGlobalWindowOuter::OpenJS(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, mozilla::dom::BrowsingContext**) /dom/base/nsGlobalWindowOuter.cpp:5610:10
        #5 0x7f9f7ddd7540 in nsGlobalWindowOuter::OpenOuter(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, mozilla::ErrorResult&) /dom/base/nsGlobalWindowOuter.cpp:5574:17
        #6 0x7f9f7dd69ae2 in nsGlobalWindowInner::Open(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, mozilla::ErrorResult&) /dom/base/nsGlobalWindowInner.cpp:4102:3
        #7 0x7f9f7f6daa51 in mozilla::dom::Window_Binding::open(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&) /builds/worker/workspace/obj-build/dom/bindings/WindowBinding.cpp:2665:59
        #8 0x7f9f7ff509a0 in bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::MaybeCrossOriginObjectThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) /dom/bindings/BindingUtils.cpp:3285:13
        #9 0x7f9f8a3caaa0 in CallJSNative /js/src/vm/Interpreter.cpp:421:13
        #10 0x7f9f8a3caaa0 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /js/src/vm/Interpreter.cpp:508:12
        #11 0x7f9f8a3b90f2 in InternalCall /js/src/vm/Interpreter.cpp:575:10
        #12 0x7f9f8a3b90f2 in CallFromStack /js/src/vm/Interpreter.cpp:579:10
        #13 0x7f9f8a3b90f2 in Interpret(JSContext*, js::RunState&) /js/src/vm/Interpreter.cpp:3325:16
        #14 0x7f9f8a39e5f9 in js::RunScript(JSContext*, js::RunState&) /js/src/vm/Interpreter.cpp:390:13
        #15 0x7f9f8a3cabde in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /js/src/vm/Interpreter.cpp:540:13
        #16 0x7f9f8a3cc6be in InternalCall /js/src/vm/Interpreter.cpp:575:10
        #17 0x7f9f8a3cc6be in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /js/src/vm/Interpreter.cpp:606:8
        #18 0x7f9f88dc1464 in js::CallSelfHostedFunction(JSContext*, JS::Handle<js::PropertyName*>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>) /js/src/vm/SelfHosting.cpp:1603:10
        #19 0x7f9f88a48b41 in AsyncFunctionResume(JSContext*, JS::Handle<js::AsyncFunctionGeneratorObject*>, ResumeKind, JS::Handle<JS::Value>) /js/src/vm/AsyncFunction.cpp:152:8
        #20 0x7f9f88d143a5 in AsyncFunctionPromiseReactionJob(JSContext*, JS::Handle<PromiseReactionRecord*>) /js/src/builtin/Promise.cpp:2117:10
        #21 0x7f9f88d1219d in PromiseReactionJob(JSContext*, unsigned int, JS::Value*) /js/src/builtin/Promise.cpp:2175:12
        #22 0x7f9f8a3caaa0 in CallJSNative /js/src/vm/Interpreter.cpp:421:13
        #23 0x7f9f8a3caaa0 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /js/src/vm/Interpreter.cpp:508:12
        #24 0x7f9f8a3cc6be in InternalCall /js/src/vm/Interpreter.cpp:575:10
        #25 0x7f9f8a3cc6be in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /js/src/vm/Interpreter.cpp:606:8
        #26 0x7f9f88a855b5 in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /js/src/vm/CallAndConstruct.cpp:117:10
        #27 0x7f9f7ed125dc in mozilla::dom::PromiseJobCallback::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/PromiseBinding.cpp:35:8
        #28 0x7f9f7ac14b57 in Call /builds/worker/workspace/obj-build/dist/include/mozilla/dom/PromiseBinding.h:88:12
        #29 0x7f9f7ac14b57 in Call /builds/worker/workspace/obj-build/dist/include/mozilla/dom/PromiseBinding.h:101:12
        #30 0x7f9f7ac14b57 in mozilla::PromiseJobRunnable::Run(mozilla::AutoSlowOperation&) /xpcom/base/CycleCollectedJSContext.cpp:213:18
        #31 0x7f9f7abf4ba7 in mozilla::CycleCollectedJSContext::PerformMicroTaskCheckPoint(bool) /xpcom/base/CycleCollectedJSContext.cpp:676:17
        #32 0x7f9f7dd47c40 in LeaveMicroTask /builds/worker/workspace/obj-build/dist/include/mozilla/CycleCollectedJSContext.h:246:7
        #33 0x7f9f7dd47c40 in ~nsAutoMicroTask /builds/worker/workspace/obj-build/dist/include/mozilla/CycleCollectedJSContext.h:397:13
        #34 0x7f9f7dd47c40 in nsGlobalWindowInner::CallDocumentFlushedResolvers(bool) /dom/base/nsGlobalWindowInner.cpp:7251:5
        #35 0x7f9f7dd45150 in nsGlobalWindowInner::FreeInnerObjects() /dom/base/nsGlobalWindowInner.cpp:1227:3
        #36 0x7f9f7ddb3f0d in nsGlobalWindowOuter::DetachFromDocShell(bool) /dom/base/nsGlobalWindowOuter.cpp:2692:12
        #37 0x7f9f876b8cbd in nsDocShell::Destroy() /docshell/base/nsDocShell.cpp:4606:20
        #38 0x7f9f7e31ed5d in nsFrameLoader::DestroyDocShell() /dom/base/nsFrameLoader.cpp:2044:20
        #39 0x7f9f7e31ea9d in nsFrameLoaderDestroyRunnable::Run() /dom/base/nsFrameLoader.cpp:1978:21
        #40 0x7f9f7dfded7a in mozilla::dom::Document::MaybeInitializeFinalizeFrameLoaders() /dom/base/Document.cpp:9383:22
        #41 0x7f9f7e0c21fd in applyImpl<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1147:12
        #42 0x7f9f7e0c21fd in apply<mozilla::dom::Document, void (mozilla::dom::Document::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1153:12
        #43 0x7f9f7e0c21fd in mozilla::detail::RunnableMethodImpl<mozilla::dom::Document*, void (mozilla::dom::Document::*)(), true, (mozilla::RunnableKind)0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1200:13
        #44 0x7f9f7dc8d02a in nsContentUtils::RemoveScriptBlocker() /dom/base/nsContentUtils.cpp:5732:17
        #45 0x7f9f83c8c74d in ~nsAutoScriptBlocker /dom/base/nsContentUtils.h:3538:28
        #46 0x7f9f83c8c74d in nsDocumentViewer::Destroy() /layout/base/nsDocumentViewer.cpp:1788:1
        #47 0x7f9f876b8b51 in nsDocShell::Destroy() /docshell/base/nsDocShell.cpp:4596:21
        #48 0x7f9f87f555dd in nsWebBrowser::SetDocShell(nsDocShell*) /toolkit/components/browser/nsWebBrowser.cpp:1123:18
        #49 0x7f9f87f54b1c in nsWebBrowser::InternalDestroy() /toolkit/components/browser/nsWebBrowser.cpp:176:3
        #50 0x7f9f87f5a01c in Destroy /toolkit/components/browser/nsWebBrowser.cpp:858:3
        #51 0x7f9f87f5a01c in non-virtual thunk to nsWebBrowser::Destroy() /toolkit/components/browser/nsWebBrowser.cpp
        #52 0x7f9f8279c3c0 in mozilla::dom::BrowserChild::DestroyWindow() /dom/ipc/BrowserChild.cpp:859:31
        #53 0x7f9f827b45dc in mozilla::dom::BrowserChild::RecvDestroy() /dom/ipc/BrowserChild.cpp:2584:3
        #54 0x7f9f8295c413 in mozilla::dom::PBrowserChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PBrowserChild.cpp:7149:80
        #55 0x7f9f82a11431 in mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PContentChild.cpp:8503:32
        #56 0x7f9f7c5a2949 in mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) /ipc/glue/MessageChannel.cpp:1749:25
        #57 0x7f9f7c59f9b7 in mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::UniquePtr<IPC::Message, mozilla::DefaultDelete<IPC::Message> >) /ipc/glue/MessageChannel.cpp:1674:9
        #58 0x7f9f7c5a0604 in mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::ipc::MessageChannel::MessageTask&) /ipc/glue/MessageChannel.cpp:1474:3
        #59 0x7f9f7c5a1892 in mozilla::ipc::MessageChannel::MessageTask::Run() /ipc/glue/MessageChannel.cpp:1572:14
        #60 0x7f9f7ae4bd22 in mozilla::RunnableTask::Run() /xpcom/threads/TaskController.cpp:538:16
        #61 0x7f9f7ae0c66d in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:851:26
        #62 0x7f9f7ae097d8 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:683:15
        #63 0x7f9f7ae09f00 in mozilla::TaskController::ProcessPendingMTTask(bool) /xpcom/threads/TaskController.cpp:461:36
        #64 0x7f9f7ae54c84 in operator() /xpcom/threads/TaskController.cpp:190:37
        #65 0x7f9f7ae54c84 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_1>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:531:5
        #66 0x7f9f7ae2d8a7 in nsThread::ProcessNextEvent(bool, bool*) /xpcom/threads/nsThread.cpp:1205:16
        #67 0x7f9f7ae37d24 in NS_ProcessNextEvent(nsIThread*, bool) /xpcom/threads/nsThreadUtils.cpp:465:10
        #68 0x7f9f830bef9b in bool mozilla::SpinEventLoopUntil<(mozilla::ProcessFailureBehavior)1, mozilla::dom::XMLHttpRequestMainThread::SendInternal(mozilla::dom::BodyExtractorBase const*, bool, mozilla::ErrorResult&)::$_1>(nsTSubstring<char> const&, mozilla::dom::XMLHttpRequestMainThread::SendInternal(mozilla::dom::BodyExtractorBase const*, bool, mozilla::ErrorResult&)::$_1&&, nsIThread*) /builds/worker/workspace/obj-build/dist/include/mozilla/SpinEventLoopUntil.h:176:25
        #69 0x7f9f830bbf14 in mozilla::dom::XMLHttpRequestMainThread::SendInternal(mozilla::dom::BodyExtractorBase const*, bool, mozilla::ErrorResult&) /dom/xhr/XMLHttpRequestMainThread.cpp:3072:10
        #70 0x7f9f830ba1e9 in mozilla::dom::XMLHttpRequestMainThread::Send(mozilla::dom::Nullable<mozilla::dom::DocumentOrBlobOrArrayBufferViewOrArrayBufferOrFormDataOrURLSearchParamsOrUSVString> const&, mozilla::ErrorResult&) /dom/xhr/XMLHttpRequestMainThread.cpp:2817:5
        #71 0x7f9f7f7ee8a3 in mozilla::dom::XMLHttpRequest_Binding::send(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&) /builds/worker/workspace/obj-build/dom/bindings/XMLHttpRequestBinding.cpp:1349:24
        #72 0x7f9f7ff4cc4f in bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) /dom/bindings/BindingUtils.cpp:3285:13
        #73 0x7f9f8a3caaa0 in CallJSNative /js/src/vm/Interpreter.cpp:421:13
        #74 0x7f9f8a3caaa0 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /js/src/vm/Interpreter.cpp:508:12
        #75 0x7f9f8a3b90f2 in InternalCall /js/src/vm/Interpreter.cpp:575:10
        #76 0x7f9f8a3b90f2 in CallFromStack /js/src/vm/Interpreter.cpp:579:10
        #77 0x7f9f8a3b90f2 in Interpret(JSContext*, js::RunState&) /js/src/vm/Interpreter.cpp:3325:16
        #78 0x7f9f8a39e5f9 in js::RunScript(JSContext*, js::RunState&) /js/src/vm/Interpreter.cpp:390:13
        #79 0x7f9f8a3cabde in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /js/src/vm/Interpreter.cpp:540:13
        #80 0x7f9f8a3cc6be in InternalCall /js/src/vm/Interpreter.cpp:575:10
        #81 0x7f9f8a3cc6be in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) /js/src/vm/Interpreter.cpp:606:8
        #82 0x7f9f88a855b5 in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /js/src/vm/CallAndConstruct.cpp:117:10
        #83 0x7f9f7fc58963 in mozilla::dom::Function::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, nsTArray<JS::Value> const&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/FunctionBinding.cpp:50:8
        #84 0x7f9f7e220f91 in void mozilla::dom::Function::Call<nsCOMPtr<nsIGlobalObject> >(nsCOMPtr<nsIGlobalObject> const&, nsTArray<JS::Value> const&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/FunctionBinding.h:71:12
        #85 0x7f9f7e220b7a in mozilla::dom::CallbackTimeoutHandler::Call(char const*) /dom/base/TimeoutHandler.cpp:167:29
        #86 0x7f9f7dd7ec3a in nsGlobalWindowInner::RunTimeoutHandler(mozilla::dom::Timeout*, nsIScriptContext*) /dom/base/nsGlobalWindowInner.cpp:6413:38
        #87 0x7f9f7e2365b7 in mozilla::dom::TimeoutManager::RunTimeout(mozilla::TimeStamp const&, mozilla::TimeStamp const&, bool) /dom/base/TimeoutManager.cpp:903:44
        #88 0x7f9f7e21d495 in mozilla::dom::TimeoutExecutor::MaybeExecute() /dom/base/TimeoutExecutor.cpp:179:11
        #89 0x7f9f7e21e03c in Notify /dom/base/TimeoutExecutor.cpp:246:5
        #90 0x7f9f7e21e03c in non-virtual thunk to mozilla::dom::TimeoutExecutor::Notify(nsITimer*) /dom/base/TimeoutExecutor.cpp
        #91 0x7f9f7ae76eae in match<(lambda at /xpcom/threads/nsTimerImpl.cpp:655:7), (lambda at /xpcom/threads/nsTimerImpl.cpp:656:7), (lambda at /xpcom/threads/nsTimerImpl.cpp:657:7), (lambda at /xpcom/threads/nsTimerImpl.cpp:660:7), (lambda at /xpcom/threads/nsTimerImpl.cpp:661:7)> /builds/worker/workspace/obj-build/dist/include/mozilla/Variant.h:857:12
        #92 0x7f9f7ae76eae in nsTimerImpl::Fire(int) /xpcom/threads/nsTimerImpl.cpp:654:22
        #93 0x7f9f7ae196df in nsTimerEvent::Run() /xpcom/threads/TimerThread.cpp:365:11
        #94 0x7f9f7ae52c22 in mozilla::ThrottledEventQueue::Inner::ExecuteRunnable() /xpcom/threads/ThrottledEventQueue.cpp:254:22
        #95 0x7f9f7ae459bf in mozilla::ThrottledEventQueue::Inner::Executor::Run() /xpcom/threads/ThrottledEventQueue.cpp:81:15
        #96 0x7f9f7ae4bd22 in mozilla::RunnableTask::Run() /xpcom/threads/TaskController.cpp:538:16
        #97 0x7f9f7ae0c66d in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:851:26
        #98 0x7f9f7ae097d8 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /xpcom/threads/TaskController.cpp:683:15
        #99 0x7f9f7ae09f00 in mozilla::TaskController::ProcessPendingMTTask(bool) /xpcom/threads/TaskController.cpp:461:36
        #100 0x7f9f7ae54c51 in operator() /xpcom/threads/TaskController.cpp:187:37
        #101 0x7f9f7ae54c51 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_0>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:531:5
        #102 0x7f9f7ae2d8a7 in nsThread::ProcessNextEvent(bool, bool*) /xpcom/threads/nsThread.cpp:1205:16
        #103 0x7f9f7ae37d24 in NS_ProcessNextEvent(nsIThread*, bool) /xpcom/threads/nsThreadUtils.cpp:465:10
        #104 0x7f9f7c5aa10f in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /ipc/glue/MessagePump.cpp:85:21
        #105 0x7f9f7c42a4d1 in RunInternal /ipc/chromium/src/base/message_loop.cc:380:10
        #106 0x7f9f7c42a4d1 in RunHandler /ipc/chromium/src/base/message_loop.cc:373:3
        #107 0x7f9f7c42a4d1 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:355:3
        #108 0x7f9f835a9687 in nsBaseAppShell::Run() /widget/nsBaseAppShell.cpp:150:27
        #109 0x7f9f8858f247 in XRE_RunAppShell() /toolkit/xre/nsEmbedFunctions.cpp:875:20
        #110 0x7f9f7c42a4d1 in RunInternal /ipc/chromium/src/base/message_loop.cc:380:10
        #111 0x7f9f7c42a4d1 in RunHandler /ipc/chromium/src/base/message_loop.cc:373:3
        #112 0x7f9f7c42a4d1 in MessageLoop::Run() /ipc/chromium/src/base/message_loop.cc:355:3
        #113 0x7f9f8858e3af in XRE_InitChildProcess(int, char**, XREChildData const*) /toolkit/xre/nsEmbedFunctions.cpp:734:34
        #114 0x55c44761a795 in content_process_main(mozilla::Bootstrap*, int, char**) /browser/app/../../ipc/contentproc/plugin-container.cpp:57:28
        #115 0x55c44761ab46 in main /browser/app/nsBrowserApp.cpp:338:18
        #116 0x7f9fa2868082 in __libc_start_main /build/glibc-SzIz7B/glibc-2.31/csu/../csu/libc-start.c:308:16
        #117 0x55c44755abd9 in _start (/home/jkratzer/builds/mc-asan/firefox+0x77bd9) (BuildId: 00d17709eebccf38f0c893a1c7bbf46ae1d4480d)
    
    AddressSanitizer can not provide additional info.
    SUMMARY: AddressSanitizer: SEGV /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Document.h:1101:12 in GetEmbedderPolicy
    ==1449262==ABORTING
Attached file Testcase

Bugmon Analysis
Verified bug as reproducible on mozilla-central 20220630212430-65f99678a1ef.
The bug appears to have been introduced in the following build range:

Start: c26228e5a3047a5debb9d401efca6fc7acb4883c (20210812164029)
End: eacd6f08df5e4f6a216ff58ae294d8bc1e22b31c (20210812183805)
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=c26228e5a3047a5debb9d401efca6fc7acb4883c&tochange=eacd6f08df5e4f6a216ff58ae294d8bc1e22b31c

Keywords: regression
Whiteboard: [bugmon:confirm] → [bugmon:bisected,confirmed]
Crash Signature: [@ GetEmbedderPolicy] → [@ GetEmbedderPolicy] [@ nsWindowWatcher::OpenWindowInternal ]
See Also: → 1670821
Keywords: crash

Hi Andrew, would you mind take a look to see what's up?

Flags: needinfo?(continuation)

I'll take more of a look later, but Olli's patches in that range look the most related.

Assignee: nobody → bugs
Flags: needinfo?(continuation)

:smaug, since this bug contains a bisection range, could you fill (if possible) the regressed_by field?
For more information, please visit auto_nag documentation.

Flags: needinfo?(bugs)

Setting S2 because of a crash, but the number of crash reports is not high, so perhaps P3.

Severity: -- → S2
Priority: -- → P3

and most of those crashes aren't about this

Flags: needinfo?(bugs)
Attachment #9285382 - Attachment description: WIP: Bug 1777572, opener may go away while opening a new window, r=nika → WIP: Bug 1777572, opener going away while opening a new window should not affect csp behavior, r=nika
Attachment #9285382 - Attachment description: WIP: Bug 1777572, opener going away while opening a new window should not affect csp behavior, r=nika → Bug 1777572, opener going away while opening a new window should not affect csp behavior, r=nika
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/447e192227c6
opener going away while opening a new window should not affect csp behavior, r=nika
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch

Bugmon Analysis
Verified bug as fixed on rev mozilla-central 20220721034738-78a43d5ba28e.
Removing bugmon keyword as no further action possible. Please review the bug and re-add the keyword for further analysis.

Status: RESOLVED → VERIFIED
Keywords: bugmon
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: