Bug 1777572, opener going away while opening a new window should not affect csp behavior, r=nika

Differential Revision: https://phabricator.services.mozilla.com/D151767